# Numerki

CalkowanieMetodaNewtone-Cortez/: CMakeLists.txt  funkcje.cpp  funkcje.h  main.cpp  metodaGaussaOrazWzorSimpsona.cpp  metodaGaussaOrazWzorSimpsona.h
InterpolacjaLagrancaRownolegla/: CMakeLists.txt  interpolacja.7z  interpolacja.cpp  interpolacja.h  main.cpp  schematHorneraOrazFunkcje.cpp  schematHorneraOrazFunkcje.h  zapisOrazOdczyt.cpp  zapisOrazOdczyt.h  zmiennaGlobalnaOrazWskaznikNaFunkcje.cpp
MetodaBisekcjiOrazNewtona/: CMakeLists.txt  MetodaBisekcjiOrazNewtona.7z  funkcje.cpp  funkcje.h  main.cpp  metody.cpp  metody.h  zapisDoFunkcji.h  zapisDoPliku.cpp
OscylatorHarmoniczny/: CMakeLists.txt  main.cpp
SPRAWOZDANIA/: Metody Numeryczne - Sprawozdanie Zadanie 1.docx  MetodyNumeryczne-SprawozdanieLab2_Maciej_Bartos_Kamil_Celejewski.doc  MetodyNumeryczne-SprawozdanieLab2_Maciej_Bartos_Kamil_Celejewski.docx  MetodyNumeryczne-SprawozdanieLab3_Maciej_Bartos_Kamil_Celejewski.doc  MetodyNumeryczne-SprawozdanieLab4_Maciej_Bartos_Kamil_Celejewski.docx
aproksymacja/: CMakeLists.txt  aproksymacja.7z  daneDoWykresu.cpp  daneDoWykresu.h  funkcje.cpp  funkcje.h  iloscPunktowOrazWskazniki.h  main.cpp  metodaSimpsonaOrazWielomianCzebyszewa.cpp  metodaSimpsonaOrazWielomianCzebyszewa.h  wspolczynniki.cpp  wspolczynniki.h
metodaEliminacjiGaussa/: CMakeLists.txt  main.cpp  metodaGaussa.cpp  metodaGaussa.h  operacjeNaMacierzy.cpp  operacjeNaMacierzy.h  ukladRownan.cpp  ukladRownan.h  warunkiNaRodzajMacierzy.cpp  warunkiNaRodzajMacierzy.h
